ajout de la carte de lucas

--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@
             
                 <img src="https://media.giphy.com/media/3o6gDYNNm8a2hfzTNe/giphy.gif" alt="gid de skate" height="75px">
 
-                <h1>Lucas Dechavanne</h1>
-            <p>HeHeHe</p>
+                <h1 style="text-align:center;">Lucas Dechavanne</h1>
+            <p>! GIT pro !</p>
+                <img id="image-bas"src="https://i.giphy.com/media/l3nWnwy9XdhgyYSOc/200w.webp" alt="jambes qui se déplace en skate" height="50px">
+
             </div>
 
 
